new saveReport view to save tour or summary reports as pdf. export and import working #8 #10 #11